crates/tui/tests/snapshots/render__calendar_picker.snap
---
source: crates/tui/tests/render.rs
expression: terminal.backend().to_string()
---
" Edit [1]  Fix the flaky build                                                                                          "
"┌ Title ───────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Fix the flaky build                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Status ─────────────────────────────────────────────────────────────┐ ┌ Priority ────────────────────────────────────┐"
"│  in-progress   ready   waiting   blocked   later   none             │ │  A   B   C                                   │"
"└─────────────────────────────────────────────────────────────────────┘ └──────────────────────────────────────────────┘"
"┌ Due ─────────┐ ┌ Project ────────────────────┌ Due ──────────────────┐─────┐ ┌ Tags ─────────────────────────────────┐"
"│ 2026-10-10   │ │ /home/me/code/app           │     October 2026      │     │ │ ci                                    │"
"└──────────────┘ └─────────────────────────────│  Mo Tu We Th Fr Sa Su │─────┘ └───────────────────────────────────────┘"
"┌ Description ─────────────────────────────────│            1  2  3  4 │───────────────────────────────────────────────┐"
"│ The nightly job fails one time in three.     │   5  6  7  8  9 10 11 │                                               │"
"│ Suspect the cache.                           │  12 13 14 15 16 17 18 │                                               │"
"│                                              │  19 20 21 22 23 24 25 │                                               │"
"│                                              │  26 27 28 29 30 31    │                                               │"
"│                                              └───────────────────────┘                                               │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"↑↓←→ day / week  PgUp/PgDn month  t today  Enter pick  Esc close                                                        "
