crates/tui/tests/snapshots/render__calendar_picker_next_month.snap
---
source: crates/tui/tests/render.rs
expression: "screen(&mut model, 120, 24)"
---
" Edit [1]  Fix the flaky build                                                                                          "
"┌ Title ───────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Fix the flaky build                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Status ─────────────────────────────────────────────────────────────┐ ┌ Priority ────────────────────────────────────┐"
"│  in-progress   ready   waiting   blocked   later   none             │ │  A   B   C                                   │"
"└──────────────────────────────────────────────┌ Due ──────────────────┐└──────────────────────────────────────────────┘"
"┌ Due ─────────┐ ┌ Project ────────────────────│     November 2026     │─────┐ ┌ Tags ─────────────────────────────────┐"
"│ 2026-10-10   │ │ /home/me/code/app           │  Mo Tu We Th Fr Sa Su │     │ │ ci                                    │"
"└──────────────┘ └─────────────────────────────│                     1 │─────┘ └───────────────────────────────────────┘"
"┌ Description ─────────────────────────────────│   2  3  4  5  6  7  8 │───────────────────────────────────────────────┐"
"│ The nightly job fails one time in three.     │   9 10 11 12 13 14 15 │                                               │"
"│ Suspect the cache.                           │  16 17 18 19 20 21 22 │                                               │"
"│                                              │  23 24 25 26 27 28 29 │                                               │"
"│                                              │  30                   │                                               │"
"│                                              └───────────────────────┘                                               │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"↑↓←→ day / week  PgUp/PgDn month  t today  Enter pick  Esc close                                                        "
