crates/tui/tests/snapshots/render__detail_bottom.snap
---
source: crates/tui/tests/render.rs
expression: "screen(&mut model, 80, 30)"
---
"┌ Tasks (5/5) ─────────────────────────────────────────────────────────────────┐"
"│IN PROGRESS (1)                                                               │"
"│  [ 1] #A Fix the flaky build (due in 4d)  #ci                                │"
"│                                                                              │"
"│READY (2)                                                                     │"
"│  [12] #B Review MR !88: paginate the export  #gitlab   #review-request       │"
"│  [ 3] #C Write the release notes                                             │"
"│                                                                              │"
"│LATER (1)                                                                     │"
"│  [ 4] #B Try the new profiler                                                │"
"│                                                                              │"
"│NO STATUS (1)                                                                 │"
"│  [ 5] #B Call the bank                                                       │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ [1] ─────────────────────────────────────────────────────────────────────────┐"
"│Fix the flaky build                                                           │"
"│[1]  #A  in-progress  due in 4d, 2026-10-10                                   │"
"│ #ci                                                                          │"
"│                                                                              │"
"│Project: /home/me/code/app                                                    │"
"│                                                                              │"
"│Description                                                                   │"
"│The nightly job fails one time in three.                                      │"
"│Suspect the cache.                                                            │"
"│                                                                              │"
"│Related                                                                       │"
"│- https://example.com/issue/1                                                 │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"j/k  /  c t p l d e  Enter open  s/S sync  ? help  q quit                       "
