crates/tui/tests/snapshots/render__done_hidden.snap
---
source: crates/tui/tests/render.rs
expression: "screen(&mut model, 80, 18)"
---
"┌ Tasks (5/5) ─────────────────────────────────────────────────────────────────┐"
"│IN PROGRESS (1)                                                               │"
"│  [ 1] #A Fix the flaky build (due in 4d)  #ci                                │"
"│                                                                              │"
"│READY (2)                                                                     │"
"│  [12] #B Review MR !88: paginate the export  #gitlab   #review-request       │"
"│  [ 3] #C Write the release notes                                             │"
"│                                                                              │"
"│LATER (1)                                                                     │"
"│  [ 4] #B Try the new profiler                                                │"
"│                                                                              │"
"│NO STATUS (1)                                                                 │"
"│  [ 5] #B Call the bank                                                       │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"j/k  /  c t p l d e  Enter open  s/S sync  ? help  q quit                       "
