crates/tui/tests/snapshots/render__done_refuses_status.snap
---
source: crates/tui/tests/render.rs
expression: "screen(&mut model, 120, 22)"
---
"┌ Tasks (7/7) +done ───────────────────────────────────────┐┌ [7] ─────────────────────────────────────────────────────┐"
"│IN PROGRESS (1)                                           ││Ship the export fix                                       │"
"│  [ 1] #A Fix the flaky build (due in 4d)  #ci            ││[7]  #B  done 2026-10-05 17:10  due 2026-10-01            │"
"│                                                          ││                                                          │"
"│READY (2)                                                 ││Progress                                                  │"
"│  [12] #B Review MR !88: paginate the export  #gitlab     ││- 2026-10-05 17:10: merged                                │"
"│           #review-request                                ││                                                          │"
"│  [ 3] #C Write the release notes                         ││                                                          │"
"│                                                          ││                                                          │"
"│LATER (1)                                                 ││                                                          │"
"│  [ 4] #B Try the new profiler                            ││                                                          │"
"│                                                          ││                                                          │"
"│NO STATUS (1)                                             ││                                                          │"
"│  [ 5] #B Call the bank                                   ││                                                          │"
"│                                                          ││                                                          │"
"│DONE (2)                                                  ││                                                          │"
"│  [ 7] #B Ship the export fix (due 2026-10-01)            ││                                                          │"
"│          (closed 2026-10-05)                             ││                                                          │"
"│  [ 2] #B Rotate the API keys                             ││                                                          │"
"│                                                          ││                                                          │"
"└──────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘"
"[7] is done; `tasq reopen 7` brings it back                                                                             "
